@@ -1,0 +1,11 @@
+% $Id: hello.tex 61083 2021-11-17 02:55:42Z karl $
+% Public domain. Test file for hello,world text.
+% Originally written 2021 Martin Ruckert
+
+\catcode`\{=1 \catcode`\}=2 % can run under -ini
+\font\tenrm=cmr10 %
+\tenrm Hello world!
+\vfill
+
+\end
+
