@@ -1,3 +1,7 @@
+2024-10-23  Martin Ruckert <martin.ruckert@hm.edu>
+
+	Adding a simple hello world test.
+
 2024-09-07  Karl Berry  <karl@freefriends.org>
 
 	* am/texprof.am (texprofile_c): depend on texprofile-tangle,
